Minor refactoring; Added more extensive comments

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,7 @@
-
+<!-- Scrollspy plugin enables sticky-sidebar -->
 <script type="text/javascript">
     $('body').scrollspy({target: '#river-menu'});
 </script>
-
-
 
 </body>
 </html>
