--- a/views/journals/new.ejs
+++ b/views/journals/new.ejs
@@ -1,23 +1,22 @@
-<% include ../partials/header %>
+<!-- Create New Journal Entry -->
 
+<% include ../partials/header %>
 
 <div class="container">
     <div class="row">
-
         <h1 style="text-align: center;">Add New Journal Entry to <%=river.name%> </h1>
-        
         <div style="width:30%; margin:25px auto">
-        
-        
+            
             <form action="/rivers/<%=river._id%>/journals" method="POST">
+                
                 <div class="form-group">
                     <input class="form-control" type="date" name="journal[date]">
                 </div>
+                
                 <div class="form-group">
-                    <textarea class="form-control" type="text" name="journal[text]">Text here
-                        </textarea>
+                    <textarea class="form-control" type="text" name="journal[text]">Text here</textarea>
                 </div>
-
+                
                 <div class="form-group">
                     <button class="btn btn-lg btn-default btn-block btn-primary">Submit</button>
                 </div>
@@ -26,7 +25,7 @@
             
             <a href="/rivers">Back to Rivers Page</a>
         </div>
-        
-    </div>
-</div>
+    </div> <!-- row -->
+</div> <!-- container -->
+
 <% include ../partials/footer %>
