--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,29 +4,24 @@
         <title>River Dashboard</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/main.css">
-        
         <link rel="stylesheet" href="//code.jquery.com/ui/1/12/1/themes/smoothness/jquery-ui.css">
         <script src="//code.jquery.com/jquery-1.12.4.js"></script>
         <script src="//code.jquery.com/ui/1/12/1/jquery-ui.js"></script>
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.js'></script>
-<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.css' rel='stylesheet' />
-        
-        <style>
-            /* needed for bootstrap scrollspy plugin */
-            body{
-                position: relative;
-            }
-        </style>
-    </head>
-    <body data-spy="scroll" data-target="#river-menu">
-        
-<% include ./svgs %>
+        <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.js'></script>
+        <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.css' rel='stylesheet' />
 
-        
-        
+    </head>
+    
+    <!-- data-spy="scroll" enables sticky-sidebar -->
+    <body data-spy="scroll" data-target="#river-menu">
+
+    <!-- Include SVGs of weather icons -->
+    <% include ./svgs %>
+
+    <!-- Header bar -->
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -35,6 +30,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
 
+                    <!-- Placeholder for later -->
                     <li><a class="disabled">Login</a></li>
                     <li><a class="disabled">Create Account</a></li>
 
