--- a/views/partials/weather.ejs
+++ b/views/partials/weather.ejs
@@ -1,38 +1,30 @@
-<style>
-    #weather svg{
-  display: block;
-  outline: 1px solid blue;
-  width:100px;
-  max-width: 100%;
-  max-height:100px;
-  height: auto;    }
-</style>
-  <!--clear-day, clear-night, rain, snow, sleet, wind, fog, cloudy, partly-cloudy-day, or partly-cloudy-night--> 
-               
+<!--clear-day, clear-night, rain, snow, sleet, wind, fog, cloudy, partly-cloudy-day, or partly-cloudy-night--> 
+
 <div class="col-md-5">
     <h2>Current Weather</h2>
-        <div>
-            <svg width="100px" height="100px">
-              <use xlink:href="#<%=weather.currently.icon%>" />
-            </svg>
-        </div> <!-- current weather icon -->
-                            
-        <p><strong>Current Temperature: </strong><%= Math.round(weather.currently.temperature) %>&#176F</p>
-        <p><%= weather.currently.summary %>. <%= weather.hourly.summary %></p>
-        <p><strong>High: </strong><%= Math.round(weather.daily.data[0].temperatureHigh) %>&#176F | 
-           <strong>Low: </strong><%= Math.round(weather.daily.data[0].temperatureLow) %>&#176F</p>
+    
+    <!-- Display weather icon SVG -->
+    <!-- 'icon' is a datapoint returned from the darksky API call -->
+    <div>
+        <svg width="100px" height="100px">
+          <use xlink:href="#<%=weather.currently.icon%>" />
+        </svg>
+    </div>
 
-        <p>
-            <!-- Quick fix: manually subtracting 14,400 (4 hours) times 1,000 (conv to milliseconds) from Date object to convert UTC to EST -->
-            <!-- Will only work if rivers in EST, and will break with daylight savings time, need to come up with better fix later -->
-            <!-- toLocaleString() function => options of hour:2-digit & minute:2-digit format the response to exclude seconds -->
-            <strong>Sunrise: </strong>
-                <%= new Date(weather.daily.data[0].sunriseTime * 1000 - 14400000).toLocaleTimeString([], {hour: '2-digit', minute: '2-digit'}); %> |
-            <strong>Sunset: </strong>
-                <%= new Date(weather.daily.data[0].sunsetTime * 1000 - 14400000).toLocaleTimeString([], {hour: '2-digit', minute: '2-digit'}); %>
-        </p>
-        
-</div> <!-- col-md-7 -->
+    <p><strong>Current Temperature: </strong><%= Math.round(weather.currently.temperature) %>&#176F</p>
+    <p><%= weather.currently.summary %>. <%= weather.hourly.summary %></p>
+    <p><strong>High: </strong><%= Math.round(weather.daily.data[0].temperatureHigh) %>&#176F | 
+       <strong>Low: </strong><%= Math.round(weather.daily.data[0].temperatureLow) %>&#176F</p>
+
+<!-- TODO: Sunrise/Sunset times are wrong. Originally made a manual quickfix to adjust for daylight savings time,
+    but now it's off by a lot more than an hour. Need to revisit sometime. -->
+    <p>
+        <strong>Sunrise: </strong>
+            <%= new Date(weather.daily.data[0].sunriseTime * 1000 - 14400000).toLocaleTimeString([], {hour: '2-digit', minute: '2-digit'}); %> |
+        <strong>Sunset: </strong>
+            <%= new Date(weather.daily.data[0].sunsetTime * 1000 - 14400000).toLocaleTimeString([], {hour: '2-digit', minute: '2-digit'}); %>
+    </p>
+</div> <!-- col-md-5 -->
                         
 <div class="col-md-7">
     <ul class="list-unstyled list-group">
@@ -61,6 +53,5 @@
             </li>
         <% } %> <!-- for loop to print 5-day forecast -->
 
-                                
     </ul>
-</div> <!-- col-md-5 -->
+</div> <!-- col-md-7 -->
