--- a/views/rivers/edit.ejs
+++ b/views/rivers/edit.ejs
@@ -1,34 +1,36 @@
+<!-- EDIT RIVER -->
+
 <% include ../partials/header %>
 
 <div class="container">
     <div class="row">
-
         <h1 style="text-align: center;">Edit <%= river.name %></h1>
-        
-        
+
         <div style="width:30%; margin:25px auto">
         
-        
             <form action="/rivers/<%= river._id %>?_method=PUT" method="POST">
+                
                 <div class="form-group">
                     <input class="form-control" type="text" name="river[name]" value="<%= river.name %>">
                 </div>
+                
                 <div class="form-group">
                     <input class="form-control" type="text" name="river[location]" value="<%= river.location %>">
                 </div>
+                
                 <div class="form-group">
                     <input class="form-control" type="text" name="river[description]" value="<%= river.description %>">
                 </div>
+                
                 <div class="form-group">
                     <button class="btn btn-lg btn-default btn-block btn-primary">Submit</button>
                 </div>
-                
+
             </form>
-            
+
             <a href="/">Back to Rivers Page</a>
         </div>
-        
-    </div>
-</div>
+    </div> <!-- row -->
+</div> <!-- container -->
 
 <% include ../partials/footer %>
